--- a/Yume.Controls/Yume.Controls/Themes/Generic.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Generic.xaml
@@ -3,6 +3,6 @@
         <ResourceDictionary Source="./Controls/Buttons.xaml" />
         <ResourceDictionary Source="./Controls/Sliders.xaml" />
         <ResourceDictionary Source="./Controls/Expanders.xaml" />
-        <ResourceDictionary Source="Controls/ProgressBars.xaml" />
+        <ResourceDictionary Source="./Controls/ProgressBars.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
