--- a/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
@@ -10,12 +10,11 @@
         <Setter Property="Control.Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border>
-                        <Rectangle
-                            Margin="2"
-                            Stroke="#60000000"
-                            StrokeDashArray="1 2"
-                            StrokeThickness="1" />
+                    <Rectangle Margin="2"
+                               SnapsToDevicePixels="true"
+                               Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                               StrokeDashArray="1 2"
+                               StrokeThickness="1" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
