--- a/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
@@ -1,10 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--#region All Styles Buttons-->
-    <!--#region Include colors-->
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../Colors.xaml" />
-    </ResourceDictionary.MergedDictionaries>
-    <!--#endregion-->
     <!--#region FocusVisualButton-->
     <Style x:Key="BtnFocusVisual">
         <Setter Property="Control.Template">
@@ -15,7 +10,6 @@
                                Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
                                StrokeDashArray="1 2"
                                StrokeThickness="1" />
-                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -60,11 +54,11 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Background.Color}" />
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.BorderBrush).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Border.Color}" />
+                                            To="{DynamicResource MouseOver.Border.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -72,11 +66,11 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Background.Color}" />
+                                            To="{DynamicResource Pressed.Background.Color}" />
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.BorderBrush).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Border.Color}" />
+                                            To="{DynamicResource Pressed.Border.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
@@ -143,7 +137,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Primary.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Primary.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -151,7 +145,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Primary.Background.Color}" />
+                                            To="{DynamicResource Pressed.Primary.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
@@ -210,7 +204,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Success.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Success.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -218,7 +212,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Success.Background.Color}" />
+                                            To="{DynamicResource Pressed.Success.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
@@ -277,7 +271,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Warning.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Warning.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -286,7 +280,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Warning.Background.Color}" />
+                                            To="{DynamicResource Pressed.Warning.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
@@ -345,7 +339,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Danger.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Danger.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -353,7 +347,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Danger.Background.Color}" />
+                                            To="{DynamicResource Pressed.Danger.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
@@ -412,7 +406,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource MouseOver.Info.Background.Color}" />
+                                            To="{DynamicResource MouseOver.Info.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState Name="Pressed">
@@ -420,7 +414,7 @@
                                         <ColorAnimation
                                             Storyboard.TargetName="Border"
                                             Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource Pressed.Info.Background.Color}" />
+                                            To="{DynamicResource Pressed.Info.Background.Color}" />
                                     </Storyboard>
                                 </VisualState>
                                 <VisualStateGroup.Transitions>
