--- a/Yume.Controls/Yume.Controls/Themes/Generic.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Generic.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="./Colors.xaml" />
         <ResourceDictionary Source="./Controls/Buttons.xaml" />
         <ResourceDictionary Source="./Controls/Sliders.xaml" />
         <ResourceDictionary Source="./Controls/Expanders.xaml" />
