--- a/src/Yume.Controls/Yume.Controls/Themes/Generic.xaml
+++ b/src/Yume.Controls/Yume.Controls/Themes/Generic.xaml
@@ -3,7 +3,8 @@
         <ResourceDictionary Source="./Colors.xaml" />
         <ResourceDictionary Source="./Controls/Buttons.xaml" />
         <ResourceDictionary Source="./Controls/Sliders.xaml" />
-        <ResourceDictionary Source="./Controls/Expanders.xaml" />
+        <!--  ResourceDictionary Source="./Controls/Expanders.xaml" /  -->
+        <!--  [ Temporary exclude following style for Expander ]  -->
         <ResourceDictionary Source="./Controls/ProgressBars.xaml" />
         <ResourceDictionary Source="./Controls/Typography/TextBlocks.xaml" />
         <ResourceDictionary Source="./Controls/Typography/Labels.xaml" />
