--- a/src/iCEY.Controls/iCEY.Controls.Test/App.xaml
+++ b/src/iCEY.Controls/iCEY.Controls.Test/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="Yume.Controls.Test.App"
+    x:Class="iCEY.Controls.Test.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="MainWindow.xaml">
